// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toast styles should render the component correctly default, error, and success types 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex max-h-[4.375rem] w-[22rem] flex-col gap-1 rounded-lg border p-3 text-sm shadow-lg backdrop-blur-lg text-primary dark:bg-primary border-neutral-500 bg-white dark:border-white/30 dark:text-white"
        data-testid="toast-test"
      >
        <div
          class="flex items-start justify-between"
        >
          <span
            class="font-bold"
          >
            test
          </span>
          <div
            class="relative flex items-center justify-center"
            data-testid="tooltip-wrapper"
          >
            <button
              aria-label="Close button"
              class="text-primary/80 flex w-fit items-center justify-center transition-colors duration-150 ease-in-out dark:text-white/70 hover:text-primary hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-white/15 dark:hover:text-white -mt-1.5 -mr-1.5 rounded-full p-1"
              type="button"
            >
              <svg
                class="size-4"
                data-testid="close-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
        </div>
        <p
          class="font-regular line-clamp-1 text-neutral-700 dark:text-neutral-300"
        >
          test
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex max-h-[4.375rem] w-[22rem] flex-col gap-1 rounded-lg border p-3 text-sm shadow-lg backdrop-blur-lg text-primary dark:bg-primary border-neutral-500 bg-white dark:border-white/30 dark:text-white"
      data-testid="toast-test"
    >
      <div
        class="flex items-start justify-between"
      >
        <span
          class="font-bold"
        >
          test
        </span>
        <div
          class="relative flex items-center justify-center"
          data-testid="tooltip-wrapper"
        >
          <button
            aria-label="Close button"
            class="text-primary/80 flex w-fit items-center justify-center transition-colors duration-150 ease-in-out dark:text-white/70 hover:text-primary hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-white/15 dark:hover:text-white -mt-1.5 -mr-1.5 rounded-full p-1"
            type="button"
          >
            <svg
              class="size-4"
              data-testid="close-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
      <p
        class="font-regular line-clamp-1 text-neutral-700 dark:text-neutral-300"
      >
        test
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Toast styles should render the component correctly default, error, and success types 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex max-h-[4.375rem] w-[22rem] flex-col gap-1 rounded-lg border p-3 text-sm shadow-lg backdrop-blur-lg text-primary dark:bg-primary border-neutral-500 bg-white dark:border-white/30 dark:text-white"
        data-testid="toast-test"
      >
        <div
          class="flex items-start justify-between"
        >
          <span
            class="font-bold"
          >
            test
          </span>
          <div
            class="relative flex items-center justify-center"
            data-testid="tooltip-wrapper"
          >
            <button
              aria-label="Close button"
              class="text-primary/80 flex w-fit items-center justify-center transition-colors duration-150 ease-in-out dark:text-white/70 hover:text-primary hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-white/15 dark:hover:text-white -mt-1.5 -mr-1.5 rounded-full p-1"
              type="button"
            >
              <svg
                class="size-4"
                data-testid="close-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
        </div>
        <p
          class="font-regular line-clamp-1 text-neutral-700 dark:text-neutral-300"
        >
          test
        </p>
      </div>
    </div>
    <div>
      <div
        class="flex max-h-[4.375rem] w-[22rem] flex-col gap-1 rounded-lg border p-3 text-sm shadow-lg backdrop-blur-lg border-green-600 bg-green-50 text-green-700 dark:border-green-600 dark:bg-green-950 dark:text-green-500"
        data-testid="toast-test"
      >
        <div
          class="flex items-start justify-between"
        >
          <span
            class="font-bold"
          >
            test
          </span>
          <div
            class="relative flex items-center justify-center"
            data-testid="tooltip-wrapper"
          >
            <button
              aria-label="Close button"
              class="text-primary/80 flex w-fit items-center justify-center transition-colors duration-150 ease-in-out dark:text-white/70 hover:cursor-pointer dark:hover:bg-white/15 -mt-1.5 -mr-1.5 rounded-full p-1 hover:bg-green-500/15 hover:text-green-700 dark:hover:text-green-500"
              type="button"
            >
              <svg
                class="size-4"
                data-testid="close-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
        </div>
        <p
          class="font-regular line-clamp-1 text-neutral-700 dark:text-neutral-300"
        >
          test
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex max-h-[4.375rem] w-[22rem] flex-col gap-1 rounded-lg border p-3 text-sm shadow-lg backdrop-blur-lg border-green-600 bg-green-50 text-green-700 dark:border-green-600 dark:bg-green-950 dark:text-green-500"
      data-testid="toast-test"
    >
      <div
        class="flex items-start justify-between"
      >
        <span
          class="font-bold"
        >
          test
        </span>
        <div
          class="relative flex items-center justify-center"
          data-testid="tooltip-wrapper"
        >
          <button
            aria-label="Close button"
            class="text-primary/80 flex w-fit items-center justify-center transition-colors duration-150 ease-in-out dark:text-white/70 hover:cursor-pointer dark:hover:bg-white/15 -mt-1.5 -mr-1.5 rounded-full p-1 hover:bg-green-500/15 hover:text-green-700 dark:hover:text-green-500"
            type="button"
          >
            <svg
              class="size-4"
              data-testid="close-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
      <p
        class="font-regular line-clamp-1 text-neutral-700 dark:text-neutral-300"
      >
        test
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Toast styles should render the component correctly default, error, and success types 3`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex max-h-[4.375rem] w-[22rem] flex-col gap-1 rounded-lg border p-3 text-sm shadow-lg backdrop-blur-lg text-primary dark:bg-primary border-neutral-500 bg-white dark:border-white/30 dark:text-white"
        data-testid="toast-test"
      >
        <div
          class="flex items-start justify-between"
        >
          <span
            class="font-bold"
          >
            test
          </span>
          <div
            class="relative flex items-center justify-center"
            data-testid="tooltip-wrapper"
          >
            <button
              aria-label="Close button"
              class="text-primary/80 flex w-fit items-center justify-center transition-colors duration-150 ease-in-out dark:text-white/70 hover:text-primary hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-white/15 dark:hover:text-white -mt-1.5 -mr-1.5 rounded-full p-1"
              type="button"
            >
              <svg
                class="size-4"
                data-testid="close-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
        </div>
        <p
          class="font-regular line-clamp-1 text-neutral-700 dark:text-neutral-300"
        >
          test
        </p>
      </div>
    </div>
    <div>
      <div
        class="flex max-h-[4.375rem] w-[22rem] flex-col gap-1 rounded-lg border p-3 text-sm shadow-lg backdrop-blur-lg border-green-600 bg-green-50 text-green-700 dark:border-green-600 dark:bg-green-950 dark:text-green-500"
        data-testid="toast-test"
      >
        <div
          class="flex items-start justify-between"
        >
          <span
            class="font-bold"
          >
            test
          </span>
          <div
            class="relative flex items-center justify-center"
            data-testid="tooltip-wrapper"
          >
            <button
              aria-label="Close button"
              class="text-primary/80 flex w-fit items-center justify-center transition-colors duration-150 ease-in-out dark:text-white/70 hover:cursor-pointer dark:hover:bg-white/15 -mt-1.5 -mr-1.5 rounded-full p-1 hover:bg-green-500/15 hover:text-green-700 dark:hover:text-green-500"
              type="button"
            >
              <svg
                class="size-4"
                data-testid="close-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
        </div>
        <p
          class="font-regular line-clamp-1 text-neutral-700 dark:text-neutral-300"
        >
          test
        </p>
      </div>
    </div>
    <div>
      <div
        class="flex max-h-[4.375rem] w-[22rem] flex-col gap-1 rounded-lg border p-3 text-sm shadow-lg backdrop-blur-lg border-rose-600 bg-rose-50 text-rose-700 dark:border-rose-600 dark:bg-rose-950 dark:text-rose-500"
        data-testid="toast-test"
      >
        <div
          class="flex items-start justify-between"
        >
          <span
            class="font-bold"
          >
            test
          </span>
          <div
            class="relative flex items-center justify-center"
            data-testid="tooltip-wrapper"
          >
            <button
              aria-label="Close button"
              class="text-primary/80 flex w-fit items-center justify-center transition-colors duration-150 ease-in-out dark:text-white/70 hover:cursor-pointer dark:hover:bg-white/15 -mt-1.5 -mr-1.5 rounded-full p-1 hover:bg-rose-100 hover:text-rose-700 dark:hover:text-rose-500"
              type="button"
            >
              <svg
                class="size-4"
                data-testid="close-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
        </div>
        <p
          class="font-regular line-clamp-1 text-neutral-700 dark:text-neutral-300"
        >
          test
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex max-h-[4.375rem] w-[22rem] flex-col gap-1 rounded-lg border p-3 text-sm shadow-lg backdrop-blur-lg border-rose-600 bg-rose-50 text-rose-700 dark:border-rose-600 dark:bg-rose-950 dark:text-rose-500"
      data-testid="toast-test"
    >
      <div
        class="flex items-start justify-between"
      >
        <span
          class="font-bold"
        >
          test
        </span>
        <div
          class="relative flex items-center justify-center"
          data-testid="tooltip-wrapper"
        >
          <button
            aria-label="Close button"
            class="text-primary/80 flex w-fit items-center justify-center transition-colors duration-150 ease-in-out dark:text-white/70 hover:cursor-pointer dark:hover:bg-white/15 -mt-1.5 -mr-1.5 rounded-full p-1 hover:bg-rose-100 hover:text-rose-700 dark:hover:text-rose-500"
            type="button"
          >
            <svg
              class="size-4"
              data-testid="close-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
      <p
        class="font-regular line-clamp-1 text-neutral-700 dark:text-neutral-300"
      >
        test
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
